--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
   </div>
 
-  <footer>🌍 Created by <strong>Ishan, Karn and Hemant</strong> | 2025 ©</footer>
+  <footer>🌍 Created by <strong>Ishan, Karn and Hemant</strong> | CSE - 19 ©</footer>
 
    
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
