--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     }
 
     #date {
-      font-size: 14px;
-      color: #555;
+      font-size: 18px;
+      color: #0d0a0a;
       text-align: center;
     }
 
