--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ footer {
 <body>
 
 <header>
-  <div class="logo">🌦 Live Weather Dashboard</div>
+  <div class="logo"><center>🌦 Live Weather Dashboard</center></div>
 
   <button class="hamburger-btn" id="hamburger-menu">
     <span></span>
