--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ header {
 .logo {
   font-size: 1.7rem;
   font-weight: 700;
+  text-align: center;
 }
 
 /* HAMBURGER */
@@ -208,7 +209,7 @@ footer {
 <body>
 
 <header>
-  <div class="logo"><center>🌦 Live Weather Dashboard</center></div>
+  <div class="logo">🌦 Live Weather Dashboard</div>
 
   <button class="hamburger-btn" id="hamburger-menu">
     <span></span>
