--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@ header {
 .logo {
   font-size: 1.7rem;
   font-weight: 700;
-  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
 }
+
 
 /* HAMBURGER */
 .hamburger-btn {
