--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@ header {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  white-space: nowrap;
 }
-
 
 /* HAMBURGER */
 .hamburger-btn {
@@ -61,7 +59,6 @@ header {
   transition: 0.3s ease;
 }
 
-/* Hamburger animation */
 .hamburger-btn.active span:nth-child(1) {
   transform: rotate(45deg) translate(6px, 6px);
 }
@@ -88,7 +85,6 @@ header {
 .mobile-menu a {
   color: white;
   text-decoration: none;
-  font-size: 16px;
 }
 
 .mobile-menu.show {
@@ -135,7 +131,6 @@ header {
 #forecast-box {
   width: 100%;
   max-width: 1200px;
-  min-height: 450px;
 }
 
 /* WEATHER UI */
@@ -149,7 +144,6 @@ header {
   padding: 12px;
   border: none;
   border-radius: 6px;
-  font-size: 15px;
 }
 
 #weather-info {
@@ -170,42 +164,17 @@ header {
   background: rgba(255,255,255,0.15);
   padding: 12px;
   border-radius: 12px;
-  margin-bottom: 10px;
 }
 
-/* FOOTER */
+.forecast-day strong {
+  font-size: 16px;
+}
+
 footer {
   background: rgba(0,0,0,0.35);
   color: white;
   text-align: center;
   padding: 10px;
-}
-
-/* SUGGESTIONS & FACTS */
-.info-box h2 {
-  color: #fff;
-  font-size: 1.3rem;
-  margin-bottom: 15px;
-  border-bottom: 2px solid rgba(255,255,255,0.3);
-  padding-bottom: 10px;
-  text-align: center;
-}
-
-#ai-recommendation-text,
-#facts-content {
-  color: #fff;
-  line-height: 1.6;
-  font-size: 14px;
-}
-
-#forecast-content {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.forecast-day img {
-  width: 40px;
 }
 </style>
 </head>
@@ -216,24 +185,18 @@ footer {
   <div class="logo">🌦 Live Weather Dashboard</div>
 
   <button class="hamburger-btn" id="hamburger-menu">
-    <span></span>
-    <span></span>
-    <span></span>
+    <span></span><span></span><span></span>
   </button>
 
   <nav class="mobile-menu" id="mobile-menu">
     <a href="#">Home</a>
     <a href="#forecast-box">Forecast</a>
-    <a href="#facts-box">City Info</a>
-    <a href="#suggestions-box">Suggestions</a>
   </nav>
 </header>
 
 <div class="container">
 
   <div class="top-row">
-
-    <!-- WEATHER CARD -->
     <div class="weather-card">
       <h1>Weather App</h1>
       <div class="input-group">
@@ -250,19 +213,6 @@ footer {
         <p id="wind-speed"></p>
       </div>
     </div>
-
-    <!-- SUGGESTIONS -->
-    <div class="info-box" id="suggestions-box">
-      <h2>💡 Weather Suggestions</h2>
-      <div id="ai-recommendation-text"></div>
-    </div>
-
-    <!-- CITY FACTS -->
-    <div class="info-box" id="facts-box">
-      <h2>📍 About City</h2>
-      <div id="facts-content"></div>
-    </div>
-
   </div>
 
   <div class="bottom-row">
@@ -276,7 +226,6 @@ footer {
 
 <footer>🌍 Created by <strong>Ishan, Karn and Hemant</strong> | CSE-19 ©</footer>
 
-<!-- JS -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
 
@@ -286,37 +235,24 @@ const openWeatherApiKey = '7c405e1d16d21803d265b7c0a044b740';
 
 $(document).ready(function () {
   weatherFn('Pune');
-
-  $('#hamburger-menu').click(function () {
-    $(this).toggleClass('active');
-    $('#mobile-menu').toggleClass('show');
-  });
 });
 
 async function weatherFn(city) {
   const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}`;
   const res = await fetch(url);
   const data = await res.json();
-  if (res.ok) weatherShowFn(data);
+  weatherShowFn(data);
 }
 
 function weatherShowFn(data) {
   $('#city-name').text(data.location.name);
   $('#date').text(moment().format('MMMM Do YYYY, h:mm a'));
-  $('#temperature').html(`${data.current.temp_c}°C`);
+  $('#temperature').text(`${data.current.temp_c}°C`);
   $('#description').text(data.current.condition.text);
   $('#wind-speed').text(`Wind: ${data.current.wind_kph} km/h`);
   $('#weather-icon').attr('src', `https:${data.current.condition.icon}`);
   $('#weather-info').fadeIn();
 
-  const temp = data.current.temp_c;
-  if (temp < 0) $('body').css('background', 'linear-gradient(to right, #0f2027, #203a43, #2c5364)');
-  else if (temp < 15) $('body').css('background', 'linear-gradient(to right, #56CCF2, #2F80ED)');
-  else if (temp < 30) $('body').css('background', 'linear-gradient(to right, #43C6AC, #191654)');
-  else $('body').css('background', 'linear-gradient(to right, #FF512F, #DD2476)');
-
-  getTemperatureSuggestions(data);
-  fetchCityFacts(data.location.name, data.location.country);
   getFiveDayForecast(data.location.name);
 }
 
@@ -327,104 +263,20 @@ async function getFiveDayForecast(city) {
   displayForecast(data);
 }
 
-function getTemperatureSuggestions(weatherData) {
-  const temp = weatherData.current.temp_c;
-  let suggestions = [];
-
-  if (temp < 5) {
-    suggestions = [
-      '1. Wear multiple layers including thermal underwear and a heavy winter coat.',
-      '2. Cover your head, hands, and feet with warm accessories to prevent frostbite.',
-      '3. Stay indoors as much as possible and limit outdoor exposure.',
-      '4. Drink warm beverages to maintain body temperature.',
-      '5. Check on elderly neighbors and ensure heating systems are working properly.'
-    ];
-  } else if (temp < 10) {
-    suggestions = [
-      '1. Wear a warm jacket, sweater, and long pants for comfort.',
-      '2. Keep a scarf and gloves handy for early morning or evening outings.',
-      '3. Great weather for brisk walks or jogging with proper clothing.',
-      '4. Hot drinks like coffee or tea will help keep you warm.',
-      '5. Perfect time for indoor activities or cozy gatherings.'
-    ];
-  } else if (temp < 15) {
-    suggestions = [
-      '1. Light jacket or cardigan is recommended for outdoor activities.',
-      '2. Ideal weather for hiking, cycling, or outdoor sports.',
-      '3. Layer your clothing so you can adjust as temperatures change.',
-      '4. Comfortable temperature for sightseeing and exploring the city.',
-      '5. Great time to enjoy outdoor cafes without being too cold or hot.'
-    ];
-  } else if (temp < 20) {
-    suggestions = [
-      '1. Comfortable clothing with a light sweater for cooler moments.',
-      '2. Perfect weather for all outdoor activities and exercise.',
-      '3. Great day for picnics, parks, and outdoor events.',
-      '4. Ideal temperature for walking, running, or cycling.',
-      '5. No need for heavy clothing, enjoy the pleasant weather.'
-    ];
-  } else if (temp < 25) {
-    suggestions = [
-      '1. Wear light, breathable clothing like t-shirts and shorts.',
-      '2. Apply sunscreen if spending extended time outdoors.',
-      '3. Perfect weather for beach visits, swimming, or water activities.',
-      '4. Stay hydrated and carry a water bottle with you.',
-      '5. Great time for outdoor dining and evening walks.'
-    ];
-  } else if (temp < 30) {
-    suggestions = [
-      '1. Wear loose, light-colored clothing to stay cool.',
-      '2. Use sunglasses and a hat to protect from direct sunlight.',
-      '3. Drink plenty of water throughout the day to stay hydrated.',
-      '4. Seek shade during peak afternoon hours (12 PM - 3 PM).',
-      '5. Apply and reapply sunscreen every 2 hours if outdoors.'
-    ];
-  } else {
-    suggestions = [
-      '1. Wear minimal, light-colored, and breathable clothing.',
-      '2. Avoid outdoor activities during peak heat hours (11 AM - 4 PM).',
-      '3. Drink water frequently even if you don\'t feel thirsty.',
-      '4. Stay in air-conditioned spaces as much as possible.',
-      '5. Watch for signs of heat exhaustion: dizziness, nausea, or excessive sweating.'
-    ];
-  }
-
-  const html = suggestions.map(s => `<p>${s}</p>`).join('');
-  $('#ai-recommendation-text').html(html);
-}
-
-async function fetchCityFacts(cityName, country) {
-  $('#facts-content').html('<p style="text-align:center;">Loading city information...</p>');
-  const url = `https://en.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(cityName)}`;
-
-  try {
-    const res = await fetch(url);
-    const data = await res.json();
-
-    if (res.ok && data.extract) {
-      const extract = data.extract;
-      const thumbnail = data.thumbnail ? data.thumbnail.source : '';
-
-      let html = `<p><strong>${cityName}, ${country}</strong></p>`;
-      if (thumbnail) html += `<img src="${thumbnail}" style="max-width:100%;border-radius:10px;margin:10px 0;">`;
-      html += `<p>${extract.split('. ').slice(0, 3).join('. ')}...</p>`;
-      $('#facts-content').html(html);
-    } else {
-      $('#facts-content').html(`<p>No information available.</p>`);
-    }
-  } catch {
-    $('#facts-content').html(`<p>Unable to load city information.</p>`);
-  }
-}
-
+/* ✅ UPDATED FORECAST FUNCTION */
 function displayForecast(data) {
   $('#forecast-content').html('');
-  data.list.slice(0,5).forEach(item => {
+
+  const dailyForecast = data.list
+    .filter(item => item.dt_txt.includes('12:00:00'))
+    .slice(0, 5);
+
+  dailyForecast.forEach(item => {
     $('#forecast-content').append(`
       <div class="forecast-day">
-        <div>${moment(item.dt*1000).format('ddd')}</div>
+        <strong>${moment(item.dt * 1000).format('ddd')}</strong>
         <img src="https://openweathermap.org/img/wn/${item.weather[0].icon}.png">
-        <div>${Math.round(item.main.temp)}°C</div>
+        <div>Min: ${Math.round(item.main.temp_min)}°C | Max: ${Math.round(item.main.temp_max)}°C</div>
       </div>
     `);
   });
